# blick

./: .gitignore  .shellspec  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  blick.toml  cliff.toml  mise.toml
.github/workflows/: blick-learn.yml  blick-review.yml  blick.yml  ci.yml  release.yml
mise/tasks/: build.sh  fmt.sh  test.sh
mise/tasks/fmt/: check.sh
mise/tasks/release/: package.sh
spec/: review_spec.sh  spec_helper.sh
src/: app.rs  cli.rs  config.rs  error.rs  git.rs  github.rs  learn.rs  lib.rs  main.rs  publish.rs  review.rs  run_record.rs  scope.rs  skill.rs  workflow.rs
src/agent/: gemini.rs  mod.rs  opencode.rs  via_cli_agents.rs
src/commands/: init.rs  learn_cmd.rs  mod.rs  publish.rs  render.rs  show_config.rs
src/commands/review/: base.rs  grouping.rs  labels.rs  mod.rs  overrides.rs  run_dir.rs  task.rs
src/config/: agent.rs  effective.rs  learn.rs  mod.rs  review.rs  severity.rs  skill.rs
src/learn/: agent_pass.rs  allowlist.rs  buckets.rs  gh.rs  git.rs  mod.rs  proposal.rs  prs.rs  publish.rs  setup.rs  threads.rs
src/llm/: anthropic.rs  cli.rs  genai_client.rs  mod.rs  openai.rs
src/publish/: context.rs  dedupe.rs  gh.rs  mod.rs  notice.rs  payload.rs
src/render/: badges.rs  check_run.rs  details.rs  diff_lines.rs  github_review.rs  github_summary.rs  markers.rs  mod.rs  origin.rs
src/review/: mod.rs  parse.rs  prompt.rs  render.rs  types.rs
src/scope/: discover.rs  inherit.rs  mod.rs  owner.rs
tests/: git_integration.rs
