[package]
name = "blick"
version = "0.1.0"
edition = "2024"
description = "A configurable code review agent inspired by Warden."
license = "Apache-2.0"
repository = "https://github.com/tuist/blick"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5.39", features = ["derive"] }
futures = "0.3"
cli-agents = "0.2.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23.0"
